force-app/main/default/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Access_to_the_Property__c</fullName>
        <description>Confirm and describe the legal and physical access to the property (i.e. public road or private easement).</description>
        <inlineHelpText>Confirm and describe the legal and physical access to the property (i.e. public road or private easement). Describe the actual access. Have you been on the property?</inlineHelpText>
        <label>Legal Access to the Property</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Acquiring_Livestock__c</fullName>
        <inlineHelpText>Is TNC acquiring livestock as a part of this deal?</inlineHelpText>
        <label>XDeprecated: Acquiring Livestock?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Acreage__c</fullName>
        <inlineHelpText>If applicable, please enter the acreage of the property.</inlineHelpText>
        <label>Acreage</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Allotment_Name__c</fullName>
        <description>Deprecated 2017 - merged into a single field (Grazing Allotment Details), unless Mike McFadden says he needs us to keep this.</description>
        <inlineHelpText>If applicable, enter the name of the grazing allotment. The name of grazing allotment can be obtained by using BLM&apos;s GeoCommunicator rangeland mapping system to locate the allotment. http://www.geocommunicator.gov/GeoComm/</inlineHelpText>
        <label>XDeprecated: Allotment Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allotment_Permit_Number__c</fullName>
        <description>Deprecated 2017 - merged into a single field (Grazing Allotment Details), unless Mike McFadden says he needs us to keep this.</description>
        <inlineHelpText>If applicable, enter the grazing allotment permit number. Allotment permits are issued by BLM to graze livestock on public lands. Use BLM&apos;s GeoCommunicator rangeland mapping system to locate the permit number. http://www.geocommunicator.gov/GeoComm/</inlineHelpText>
        <label>XDeprecated: Allotment Permit Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_ID__c</fullName>
        <description>Put on water rights record instead.</description>
        <inlineHelpText>Please enter the Application ID number from the License for Diversion and Water Use document issued by the State Water Rights Board.</inlineHelpText>
        <label>XDeprecated: Application ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assessor_Parcel_Numbers__c</fullName>
        <inlineHelpText>If the APNs exceed the alloted space, attach a note/document with the full list</inlineHelpText>
        <label>Assessor Parcel Numbers</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Associate_Director_of_Science__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Associate Director of Science</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N30000002iJ7NEAU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attorney__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The name of the attorney associated with this tract.</description>
        <label>Attorney</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>equals</operation>
                <value>Legal</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunity1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Buildings_and_Improvements__c</fullName>
        <description>Describe all buildings and other improvements existing on the property.</description>
        <inlineHelpText>Describe all buildings and other improvements existing on the property including the sum total of their value.</inlineHelpText>
        <label>Buildings and Improvements Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CLS_MABR_ID__c</fullName>
        <description>Deprecated 2017 - the CLS IDs should be on the Property Interests, not the Deals.</description>
        <inlineHelpText>In CLS each managed area basic record has an unique number.</inlineHelpText>
        <label>XDeprecated: CLS MABR ID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLS_Project_Name__c</fullName>
        <description>Project name as it appears in CLS Deprecated 2017 - CLS ids found on Property Interests not on Deals</description>
        <label>XDeprecated: CLS Project Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Climate_Change_Impact__c</fullName>
        <description>Using available tools (Cal-Adapt, Data Basin, Velocity of Change data), summarize the projected climate change impacts in the region near the deal. What is projected end of century (2100) average temperature change under a low and high emissions scenario? What other potential impacts from climate change are projected? Cite sources of evidence for any described impacts. Converted from Rich Text Area field to Long Text Area field 2017 KSA</description>
        <inlineHelpText>REPAR: Summarize the projected climate change impacts in this region using Cal-Adapt, etc. What are potential impacts from climate change? Include the projected end of century avg. temp. change under low and high emissions scenario. Cite sources/evidence.</inlineHelpText>
        <label>Climate Change Impact</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Compatible_Human_Use__c</fullName>
        <description>If there is a compatible human use, it must be explained in the &quot;Current and Intended Uses&quot; field.</description>
        <inlineHelpText>If there is a compatible human use, it must be explained in the &quot;Current and Intended Uses&quot; field.</inlineHelpText>
        <label>Compatible Human Use?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>Campground</fullName>
                </value>
                <value>
                    <fullName>Energy extraction</fullName>
                </value>
                <value>
                    <fullName>Grazing</fullName>
                </value>
                <value>
                    <fullName>Industrial</fullName>
                </value>
                <value>
                    <fullName>Residential</fullName>
                </value>
                <value>
                    <fullName>Retail/Office</fullName>
                </value>
                <value>
                    <fullName>Timbering</fullName>
                </value>
                <value>
                    <fullName>Tourism</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Conditions_Precedent__c</fullName>
        <description>Describe all conditions precedent and required timing of same, such as TNC corporate approvals, third party approvals, appraisal, funding, survey, lot line adjustment, etc.</description>
        <inlineHelpText>Describe all conditions precedent and required timing of same, such as TNC corporate approvals, third party approvals, appraisal, funding, survey, lot line adjustment, etc.</inlineHelpText>
        <label>Conditions Precedent</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cons_Steward_Staffing__c</fullName>
        <inlineHelpText>What is the status of stewardship staffing for this interest?</inlineHelpText>
        <label>Conservation Stewardship Staffing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Staff</fullName>
                </value>
                <value>
                    <fullName>Partial Staff</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Conservation_Monitoring_Plan__c</fullName>
        <inlineHelpText>What is the status for the conservation monitoring plan for this interest?</inlineHelpText>
        <label>Conservation Monitoring Plan</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Plan Produced</fullName>
                </value>
                <value>
                    <fullName>Plan Produced</fullName>
                </value>
                <value>
                    <fullName>Plan Implemented</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Conservation_Strategies__c</fullName>
        <description>A field to describe how the project will contribute to the overarching goals in the conservation area.</description>
        <inlineHelpText>REPAR: What conservation problem does this deal address? And what solution will this deal demonstrate? How does this deal help achieve the outcomes identified in the Theory of Change for the relevant strategy?</inlineHelpText>
        <label>Contribution to Conservation Strategies</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>County_Global__c</fullName>
        <description>Global picklist</description>
        <inlineHelpText>Select the county or counties where the interest is located.</inlineHelpText>
        <label>County</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>County</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <description>Moved to global picklist.</description>
        <label>XDeprecated: County</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alameda</fullName>
                </value>
                <value>
                    <fullName>Alpine</fullName>
                </value>
                <value>
                    <fullName>Amador</fullName>
                </value>
                <value>
                    <fullName>Butte</fullName>
                </value>
                <value>
                    <fullName>Calaveras</fullName>
                </value>
                <value>
                    <fullName>Colusa</fullName>
                </value>
                <value>
                    <fullName>Contra Costa</fullName>
                </value>
                <value>
                    <fullName>Del Norte</fullName>
                </value>
                <value>
                    <fullName>El Dorado</fullName>
                </value>
                <value>
                    <fullName>Fresno</fullName>
                </value>
                <value>
                    <fullName>Glenn</fullName>
                </value>
                <value>
                    <fullName>Humboldt</fullName>
                </value>
                <value>
                    <fullName>Imperial</fullName>
                </value>
                <value>
                    <fullName>Inyo</fullName>
                </value>
                <value>
                    <fullName>Kern</fullName>
                </value>
                <value>
                    <fullName>Kings</fullName>
                </value>
                <value>
                    <fullName>Lake</fullName>
                </value>
                <value>
                    <fullName>Lassen</fullName>
                </value>
                <value>
                    <fullName>Los Angeles</fullName>
                </value>
                <value>
                    <fullName>Madera</fullName>
                </value>
                <value>
                    <fullName>Marin</fullName>
                </value>
                <value>
                    <fullName>Mariposa</fullName>
                </value>
                <value>
                    <fullName>Mendocino</fullName>
                </value>
                <value>
                    <fullName>Merced</fullName>
                </value>
                <value>
                    <fullName>Modoc</fullName>
                </value>
                <value>
                    <fullName>Mono</fullName>
                </value>
                <value>
                    <fullName>Monterey</fullName>
                </value>
                <value>
                    <fullName>Napa</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>Orange</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Stewardship_Budget_Approved__c</fullName>
        <inlineHelpText>Enter the date that the Stewardship Budget was Approved by the Investments Committee. Once the budget has been approved, make sure to attach the excel version of the budget to the deal record.</inlineHelpText>
        <label>Date Stewardship Budget Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Sale_Transfer__c</fullName>
        <inlineHelpText>REPAR: Please enter in the date of the sale/transfer to local land trust, state, federal, or conservation buyer.  If the sale/transfer is concurrent with this transaction, please enter the closing date.</inlineHelpText>
        <label>Date of Sale/Transfer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deal_Map_ID__c</fullName>
        <description>Deprecated - creating the urls from the extent fields instead so that we can rollup the extent for a property management unit from the property interests automatically.</description>
        <label>XDeprecated: Deal Map URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Deal_Type__c</fullName>
        <description>Mirrors the Record Type field so that we can have pick lists dependent on this value.</description>
        <inlineHelpText>Mirrors the Record Type field so that we can have pick lists dependent on this value.</inlineHelpText>
        <label>Deal Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Acquisition</fullName>
                    <label>Acquisition Deal</label>
                </value>
                <value>
                    <fullName>Assist</fullName>
                    <label>Assist Deal</label>
                </value>
                <value>
                    <fullName>Disposition</fullName>
                    <label>Disposition Deal</label>
                </value>
                <value>
                    <fullName>Other Conservation Asset</fullName>
                    <label>Other Conservation Asset Deal</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Decree_Number__c</fullName>
        <description>Deprecated 2017 - info should be on water right record instead</description>
        <inlineHelpText>If applicable, enter the decree number issued by the court. A water right decree can determine if there is a confirmed riparian, pre-1914, or prescriptive water right on the property.</inlineHelpText>
        <label>XDeprecated: Decree Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Describe_All_Leases_Property__c</fullName>
        <description>Describe all leases in effect relating to the property, including name of lessee/lessor, type of lease, lease term, lease consideration, other material lease terms, and whether such leases would be terminated prior to closing.</description>
        <inlineHelpText>Describe all leases in effect relating to the property, including the lease term, lease consideration, and other material lease terms.</inlineHelpText>
        <label>Describe All Leases on Property</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description_of_Technology__c</fullName>
        <description>Converted from Long Text Area field to Text Area field 2017 KSA</description>
        <inlineHelpText>The SWRB requires water measurements using &quot;best available technologies.&quot;  Technologies at the highest technologically practical level, using flow totaling devices and, if necessary, data loggers and telemetry.  Describe the measurement technology used.</inlineHelpText>
        <label>Description of Technology</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Deviation_from_Policies_and_Procedures__c</fullName>
        <description>Describe any conflicts or straying from TNC SOPs.</description>
        <inlineHelpText>REPAR: Describe any conflicts or straying from TNC SOPs.</inlineHelpText>
        <label>Deviation from Policies and Procedures</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ecological_Monitoring_Costs__c</fullName>
        <description>A field to describe the costs to monitor conservation targets for research purposes.</description>
        <inlineHelpText>REPAR: Describe the costs to monitor conservation targets for research purposes.</inlineHelpText>
        <label>Ecological Monitoring Costs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ecologist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ecologist</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Tracts9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FMV_of_TNC_Interest__c</fullName>
        <inlineHelpText>What is the fair market value (FMV) of the interest TNC is going to acquire or assist?</inlineHelpText>
        <label>FMV of TNC Interest</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Face_Amount__c</fullName>
        <inlineHelpText>The face amount is the total annual amount of diversion authorized for direct diversion or storage by a permit or license.</inlineHelpText>
        <label>Face Amount</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Features_to_be_Protected__c</fullName>
        <description>A field to list conservation targets and their current status.  Also include habitat targets.</description>
        <inlineHelpText>REPAR: List and describe the conservation targets likely present on the property, their current status and if they are unique to the area. Describe how completion of this deal will contribute to the maintenance of the conservation targets.</inlineHelpText>
        <label>Conservation Targets</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Finance_Analyst_Grants_Specialist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Finance Analyst/Grants Specialist</label>
        <lookupFilter>
            <active>false</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>equals</operation>
                <value>Finance &amp; Ops Staff</value>
            </filterItems>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>equals</operation>
                <value>Finance &amp; Ops Director</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunity3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Grant_Funding_Donor_Restrictions__c</fullName>
        <description>These are funding restrictions on TNC.</description>
        <inlineHelpText>Provide a summary of grant funding and/or donor restrictions that relate to the deal. Attach a copy of the grant agreement or restrictions to the &quot;Notes &amp; Attachments&quot; section.</inlineHelpText>
        <label>Grant Funding/Donor Restrictions</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Grazing_Allotment_Details__c</fullName>
        <description>Combined the fields Allotment Name, Allotment Permit Number, and Allotment Issuing Entity &amp; Lease Details into a single field.</description>
        <inlineHelpText>If applicable, enter the name of the grazing allotment, the grazing allotment permit number, and the lease issuing entity and the lease details, e.g., pasture, number of livestock, grazing period, AUMS, etc. http://www.geocommunicator.gov/GeoComm/</inlineHelpText>
        <label>Grazing Allotment Details</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Groundwater_Well_Description__c</fullName>
        <inlineHelpText>Please describe the type and locations of the groundwater wells associated with this interest(s).</inlineHelpText>
        <label>Groundwater Well Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Groundwater_Well_Number__c</fullName>
        <label>XDeprecated_Groundwater Well Number</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Reviews_and_Approval__c</fullName>
        <description>Describe any other approvals that the project must undergo prior to closing on the property.  These could be Compatible Human Use, Conservation Buyer Transaction or Conflicts Waiver.</description>
        <inlineHelpText>Describe any other approvals that the deal must undergo prior to closing on the property.  These could be Compatible Human Use, Conservation Buyer Transaction or Conflicts Waiver.</inlineHelpText>
        <label>Internal Reviews and Approval</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Latitude_Lower_Left__c</fullName>
        <inlineHelpText>Latitude value for the lower left corner of the tract&apos;s extent.</inlineHelpText>
        <label>Latitude (Lower Left)</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Latitude_Upper_Right__c</fullName>
        <inlineHelpText>Latitude value for the Upper Right corner of the tract&apos;s extent.</inlineHelpText>
        <label>Latitude (Upper Right)</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>License_ID__c</fullName>
        <description>Deprecated 2017 - should be on the water right record</description>
        <inlineHelpText>Please enter the License ID number from the License for Diversion and Water Use document issued by the State Water Rights Board.</inlineHelpText>
        <label>XDeprecated: License ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Longitude_Lower_Left__c</fullName>
        <inlineHelpText>Longitude value for the lower left corner of the tract&apos;s extent.</inlineHelpText>
        <label>Longitude (Lower Left)</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Longitude_Upper_Right__c</fullName>
        <inlineHelpText>Longitude value for the upper right corner of the tract&apos;s extent.</inlineHelpText>
        <label>Longitude (Upper Right)</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Map_Extent_X_Max__c</fullName>
        <inlineHelpText>Used for creating the Map URLs for Deals and Property Interests</inlineHelpText>
        <label>Map Extent (X-Max)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Map_Extent_X_Min__c</fullName>
        <inlineHelpText>Used for creating the Map URLs for Deals and Property Interests</inlineHelpText>
        <label>Map Extent (X-Min)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Map_Extent_Y_Max__c</fullName>
        <inlineHelpText>Used for creating the Map URLs for Deals and Property Interests</inlineHelpText>
        <label>Map Extent (Y-Max)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Map_Extent_Y_Min__c</fullName>
        <inlineHelpText>Used for creating the Map URLs for Deals and Property Interests</inlineHelpText>
        <label>Map Extent (Y-Min)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Measurement_of_Conservation_Outcomes__c</fullName>
        <description>A field to describe TNC&apos;s plan to monitor the conservation targets.</description>
        <inlineHelpText>REPAR: Describe if and how TNC will monitor the conservation targets.  This is a separate discussion from monitoring for legal compliance.</inlineHelpText>
        <label>Ecological Monitoring</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Monitoring_Obligation__c</fullName>
        <inlineHelpText>Are we required to do legal or other compliance monitoring on this property interest? If so, please describe the type of monitoring that we must do, the frequency, the term of monitoring, and any agencies that we must report to.</inlineHelpText>
        <label>Monitoring Obligation?</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Name_of_Lessee_Lessor__c</fullName>
        <inlineHelpText>Enter the name and contact information for any lessees or lessors on the property.</inlineHelpText>
        <label>Name of Lessee/Lessor</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notice_of_Termination_Sent__c</fullName>
        <description>To terminate a Williamson Act contract, a landowner files a notice of nonrenewal. Starting at the next contract anniversary date, the contract winds down over the remaining (usually nine-year) term, with the property taxes gradually rising to the full unrestricted rate at the end of the nonrenewal period. If the land is restricted by a Farmland Security Zone Contract, the contract winds down over the remaining 19 years, with the property taxes gradually rising to the full unrestricted rate at the end of the nonrenewal period.</description>
        <inlineHelpText>To terminate a Williamson Act contract, a landowner files a notice of nonrenewal. Starting at the next contract anniversary date, the contract winds down over the remaining (usually nine-year) term, with the property taxes gradually rising.</inlineHelpText>
        <label>Notice of Termination Sent?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Subject_to_Will_Act__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>To Do</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Operations__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Please select the name of the Operations staff person.</inlineHelpText>
        <label>Operations</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N30000002iJ7IEAU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Direct_Costs_Description__c</fullName>
        <description>This section should include a narrative of details of project related costs such as appraisals, environmental assessments, travel time and closing costs.</description>
        <inlineHelpText>REPAR: Include details of appraisals, environmental assessments, closing costs, etc.</inlineHelpText>
        <label>Other Direct Costs Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Identifying_Deal_Name__c</fullName>
        <inlineHelpText>What other identifying name applies to this deal, if one exists. If not, leave blank.</inlineHelpText>
        <label>Other Identifying Deal Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paralegal2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Paralegal</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N3000000240flEAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Permit_ID__c</fullName>
        <description>Deprecated 2017 - this information should be put on the water right instead.</description>
        <inlineHelpText>Please enter the Permit ID number from the License for Diversion and Water Use document issued by the State Water Rights Board.</inlineHelpText>
        <label>XDeprecated: Permit ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Property__c</fullName>
        <description>Describe any personal property included in proposed acquisition.</description>
        <inlineHelpText>Describe any personal property included in proposed acquisition.  For detailed transactional information involving personal property, attach a separate document.</inlineHelpText>
        <label>Personal Property</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Private_Fundraising__c</fullName>
        <description>Describe the amount of private fundraising needed for this deal and its associated costs, the current levels of commitment and expectations both before and after closing the deal. Converted from Rich Text Area field to Long Text Area field 2017 KSA</description>
        <inlineHelpText>REPAR: Describe the amount of private fundraising needed for this deal and its associated costs, the current levels of commitment and expectations both before and after closing the deal. (Check with Philanthropy)</inlineHelpText>
        <label>Private Fundraising</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Program_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Please select the name of the Land, Water, or Oceans Program Director.</inlineHelpText>
        <label>Program Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Tracts8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Manager_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>XDeprecated: Project Manager/Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N30000001TJm2EAG</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Significance__c</fullName>
        <description>A field to describe the entire deal in brief terms</description>
        <inlineHelpText>REPAR: Describe the structure of the transaction and goals of the deal briefly.</inlineHelpText>
        <label>Deal Overview</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Property_Interests_Reserv__c</fullName>
        <inlineHelpText>Please select the interest(s) that are reserved at closing. Describe below. If the interest that you are looking for is not on this list, please let the Salesforce Administrators know.</inlineHelpText>
        <label>Property Interests Reserved by Seller</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None Reserved by Seller</fullName>
                </value>
                <value>
                    <fullName>Development Rights</fullName>
                </value>
                <value>
                    <fullName>Easement</fullName>
                </value>
                <value>
                    <fullName>Groundwater</fullName>
                </value>
                <value>
                    <fullName>Life Estate</fullName>
                </value>
                <value>
                    <fullName>Mineral Rights</fullName>
                </value>
                <value>
                    <fullName>Riparian Rights</fullName>
                </value>
                <value>
                    <fullName>Vineyard Rights</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>